Add envars to docs

--- a/docs/getting-started/features.mdx
+++ b/docs/getting-started/features.mdx
@@ -21,7 +21,7 @@ The [CLI](/cli/overview) is used to inject environment variables into applicatio
 
 ## SDKs
 
-[SDKs](/sdks/overview) enable apps to fetch back secrets using an [Infisical Token](/getting-started/dashboard/token) scoped to a project and environment.
+[SDKs](/sdks/overview) enable apps to work with secrets using an [Infisical Token](/getting-started/dashboard/token) scoped to a project and environment.
 
 ## Roadmap
 
