--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -22,7 +22,7 @@ These examples demonstrate how to store and fetch environment variables from [In
 
     ### Set up the CLI
 
-    1. Follow the instructions to [install our platform-agnostic CLI](/cli/overview).
+    1. Follow the instructions to [install the CLI](/cli/overview).
 
     2. Initialize Infisical for your project.
 
