--- a/docs/self-hosting/configuration/envars.mdx
+++ b/docs/self-hosting/configuration/envars.mdx
@@ -71,6 +71,14 @@ Other environment variables are listed below to increase the functionality of yo
   </Tab>
   <Tab title="Integrations">
     To sync secret to third party services, provide value for the related services 
+    
+    <ParamField query="CLIENT_ID_AZURE" type="string" default="none" optional>
+      OAuth2 client ID for Azure KV integration
+    </ParamField>
+    
+    <ParamField query="CLIENT_SECRET_AZURE" type="string" default="none" optional>
+      OAuth2 client secret for Azure KV integration
+    </ParamField>
 
     <ParamField query="CLIENT_ID_HEROKU" type="string" default="none" optional>
       OAuth2 client ID for Heroku integration
@@ -86,6 +94,10 @@ Other environment variables are listed below to increase the functionality of yo
 
     <ParamField query="CLIENT_SECRET_VERCEL" type="string" default="none" optional>
       OAuth2 client secret for Vercel integration
+    </ParamField>
+    
+    <ParamField query="CLIENT_SLUG_VERCEL" type="string" default="none" optional>
+      OAuth2 slug for Netlify integration
     </ParamField>
 
     <ParamField query="CLIENT_ID_NETLIFY" type="string" default="none" optional>
@@ -103,10 +115,15 @@ Other environment variables are listed below to increase the functionality of yo
     <ParamField query="CLIENT_SECRET_GITHUB" type="string" default="none" optional>
       OAuth2 client secret for GitHub integration
     </ParamField>
-
-    <ParamField query="CLIENT_SLUG_VERCEL" type="string" default="none" optional>
-      OAuth2 slug for Netlify integration
+    
+    <ParamField query="CLIENT_ID_GITLAB" type="string" default="none" optional>
+      OAuth2 client ID for GitLab integration         
     </ParamField>
+    
+    <ParamField query="CLIENT_SECRET_GITLAB" type="string" default="none" optional>
+      OAuth2 client secret for GitLab integration         
+    </ParamField>
+
   </Tab>
   <Tab title="Others">
     #### JWT
